--- a/sqs-demo-consumer/src/main/resources/application.yml
+++ b/sqs-demo-consumer/src/main/resources/application.yml
@@ -11,4 +11,8 @@ application:
   sqs-uri: http://localhost:4566 #  https://localhost.localstack.cloud:4566/000000000000/doc-sent #
   sqs-region: sa-east-1
   sqs-queue-name: doc-sent
+  sqs-retry-queue-name: doc-sent-retry
+  sqs-retry-delay-seconds: 15
+  sqs-retry-queue-url: https://localhost.localstack.cloud:4566/000000000000/doc-sent-retry
+  sqs-response-queue-url: https://localhost.localstack.cloud:4566/000000000000/doc-sent-response
   external-uri: http://localhost:8082/receiver
