--- a/sqs-demo-consumer/src/main/resources/application.yml
+++ b/sqs-demo-consumer/src/main/resources/application.yml
@@ -12,7 +12,8 @@ application:
   sqs-region: sa-east-1
   sqs-queue-name: doc-sent
   sqs-retry-queue-name: doc-sent-retry
+  sqs-response-queue-name: doc-sent-response
   sqs-retry-delay-seconds: 15
   sqs-retry-queue-url: https://localhost.localstack.cloud:4566/000000000000/doc-sent-retry
-  sqs-response-queue-url: https://localhost.localstack.cloud:4566/000000000000/doc-sent-response
+  sqs-response-queue-url: https://localhost.localstack.cloud:4566/000000000000/${application.sqs-response-queue-name}
   external-uri: http://localhost:8082/receiver
